--- a/CalculateTipApp/app/build.gradle
+++ b/CalculateTipApp/app/build.gradle
@@ -15,6 +15,10 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+    /*
+     만일 최소버전이 21 미만이라면 vectorDrawbles.useSupportLibrary = true 선언 해주어야한다
+     벡터 이미지 지원이 21부터 되었기 때문
+     */
 
     buildTypes {
         release {
@@ -44,4 +48,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation 'com.google.android.material:material:1.6.1'
 }
