--- a/RecyclerViewApp/app/build.gradle
+++ b/RecyclerViewApp/app/build.gradle
@@ -33,12 +33,16 @@ android {
 }
 
 dependencies {
-
+    // 애플리케이션 자체에 사용
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    // 단위 테스트에 사용
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    // 계측 테스트에 사용
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.4.0'
 }
