--- a/RecyclerViewApp/.gitignore
+++ b/RecyclerViewApp/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,android,androidstudio,kotlin
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,android,androidstudio,kotlin
+# Created by https://www.toptal.com/developers/gitignore/api/androidstudio,android,test
+# Edit at https://www.toptal.com/developers/gitignore?templates=androidstudio,android,test
 
 ### Android ###
 # Gradle files
@@ -42,56 +42,85 @@ gen-external-apklibs
 # Replacement of .externalNativeBuild directories introduced
 # with Android Studio 3.5.
 
-### Kotlin ###
-# Compiled class file
-*.class
+### Test ###
+### Ignore all files that could be used to test your code and
+### you wouldn't want to push
 
-# Log file
+# Reference https://en.wikipedia.org/wiki/Metasyntactic_variable
 
-# BlueJ files
-*.ctxt
+# Most common
+*foo
+*bar
+*fubar
+*foobar
+*baz
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Less common
+*qux
+*quux
+*bongo
+*bazola
+*ztesch
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# UK, Australia
+*wibble
+*wobble
+*wubble
+*flob
+*blep
+*blah
+*boop
+*beep
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+# Japanese
+*hoge
+*piyo
+*fuga
+*hogera
+*hogehoge
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
+# Portugal, Spain
+*fulano
+*sicrano
+*beltrano
+*mengano
+*perengano
+*zutano
 
-# Dump file
-*.stackdump
+# France, Italy, the Netherlands
+*toto
+*titi
+*tata
+*tutu
+*pipppo
+*pluto
+*paperino
+*aap
+*noot
+*mies
 
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
+# Other names that would make sense
+*tests
+*testsdir
+*testsfile
+*testsfiles
+*test
+*testdir
+*testfile
+*testfiles
+*testing
+*testingdir
+*testingfile
+*testingfiles
+*temp
+*tempdir
+*tempfile
+*tempfiles
+*tmp
+*tmpdir
+*tmpfile
+*tmpfiles
+*lol
 
 ### AndroidStudio ###
 # Covers files to be ignored for android development using Android Studio.
@@ -104,6 +133,7 @@ $RECYCLE.BIN/
 *.dex
 
 # Java class files
+*.class
 
 # Generated files
 bin/
@@ -184,10 +214,14 @@ obj/
 .settings/
 
 # Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
 # Package Files #
+*.war
+*.ear
 
 # virtual machine crash logs (Reference: http://www.java.com/en/download/help/error_hotspot.xml)
+hs_err_pid*
 
 ## Plugin-specific files:
 
@@ -210,4 +244,4 @@ fabric.properties
 
 !/gradle/wrapper/gradle-wrapper.jar
 
-# End of https://www.toptal.com/developers/gitignore/api/windows,android,androidstudio,kotlin
+# End of https://www.toptal.com/developers/gitignore/api/androidstudio,android,test
