--- a/android-basics-kotlin-words-app-starter/app/build.gradle
+++ b/android-basics-kotlin-words-app-starter/app/build.gradle
@@ -55,6 +55,7 @@ android {
 }
 
 dependencies {
+    // 테스트 소스 포함한 모든 소스에서 사용 가능하게 선언
     implementation "androidx.core:core-ktx:$core_ktx_version"
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "com.google.android.material:material:$material_version"
@@ -63,4 +64,13 @@ dependencies {
     // JetPack Navigation ADD
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // androidTest 소스 내부에서만 사용 가능하게 선언
+    // ** testImplementation test 소스 내부에서만 사용 가능하게 선언
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.4.0'
+    androidTestImplementation 'androidx.navigation:navigation-testing:2.5.2'
+    // 디버그 빌드시에만 적용할 프래그먼트 테스트 라이브러라
+    debugImplementation 'androidx.fragment:fragment-testing:1.5.3'
 }
