--- a/basic-android-kotlin-training-sports-starter/app/build.gradle
+++ b/basic-android-kotlin-training-sports-starter/app/build.gradle
@@ -61,9 +61,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
     implementation 'androidx.leanback:leanback:1.0.0'
-    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0-beta01"
     // Coil
     implementation "io.coil-kt:coil:1.1.1"
 
-
+    // 적응형 레이아웃
+    implementation "androidx.slidingpanelayout:slidingpanelayout:1.2.0"
 }
