--- a/Android_Basics_in_Kotlin/Unit5/android-basics-kotlin-words-app/app/build.gradle
+++ b/Android_Basics_in_Kotlin/Unit5/android-basics-kotlin-words-app/app/build.gradle
@@ -60,4 +60,9 @@ dependencies {
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:$datastore_version"
+    // LiveData
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 }
