--- a/Android_Basics_in_Kotlin/Unit6/android-workmanager-start_kotlin/app/src/main/AndroidManifest.xml
+++ b/Android_Basics_in_Kotlin/Unit6/android-workmanager-start_kotlin/app/src/main/AndroidManifest.xml
@@ -22,6 +22,13 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.SEND" />
+            <data android:mimeType="image/jpeg" />
+        </intent>
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
